--- a/nbplain/02_lists.ipynb
+++ b/nbplain/02_lists.ipynb
@@ -4,8 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists\n",
+    "# Lists"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview:\n",
+    "- **Teaching:** 10 min\n",
+    "- **Exercises:** 10 min\n",
     "\n",
+    "**Questions**\n",
+    "- What are lists?\n",
+    "- How do I access the items in a list?\n",
+    "- How do I modify or add items to a list?\n",
+    "\n",
+    "**Objectives**\n",
+    "- Revise how to define, access, modify and append to lists\n",
+    "- Understand the difference between a list and a string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lists provide a simple way to hold a collection of values. You create a list using square brackets. For example, here we can create a list that contains the values \"cat\", \"dog\" and \"horse\"\n",
     "\n",
     "```python\n",
@@ -481,9 +504,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercises\n",
+    "## Information: Lists and strings\n",
     "\n",
-    "## Exercise 1\n",
+    "While lists and strings are similar there are key differences:\n",
+    "- Strings only contains characters\n",
+    "- While lists can be modified: an item changed or new items added, strings cannot.  Strings are *immutable*, though any variable can be reassigned a new value."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 1\n",
     "\n",
     "Create two Python lists called `a` and `b`. Put into these lists the values [2, 4, 6, 8], and [10, 20, 30, 40].\n",
     "Check that `a[2]` equals `6` and `b[-1]` equals 40. (note that you will need to use the menu \"Insert | Insert Cell Below\" to insert more cells below to create space for your code)"
@@ -535,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    "## Exercise: 2\n",
     "\n",
     "Now create a loop that loops over each item in `a` and `b` and that calculates and prints out the product `a[i] * b[i]`."
    ]
@@ -565,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3\n",
+    "## Exercise: 3\n",
     "\n",
     "Modify your code to create a list called `c`. Use the `.append` function to set `c[i] = a[i] * b[i]`. Check your code by making sure that `c[-1]` equals 320."
    ]
@@ -611,13 +643,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Key Points:\n",
+    "- A list stores many values in a single structure.\n",
+    "- Use an item’s index to fetch it from a list.\n",
+    "- Python lists start indexing at 0.\n",
+    "- Lists’ values can be replaced by assigning to them.\n",
+    "- Appending items to a list lengthens it.\n",
+    "- Character strings can be indexed like lists.\n",
+    "- BUT Character strings are immutable.\n",
+    "- Indexing beyond the end of the collection is an error.\n",
+    "- Slices beyond the end of a list are empty.\n",
+    "- If negative indexing is used, then the should be interpreted as the implied i.e. if you have 10 items in a list then the index -1, is the equivalent of 9.\n",
+    "- **Python lists start indexing at 0.**"
+   ]
   }
  ],
  "metadata": {
@@ -636,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
