--- a/nbplain/03_dictionaries.ipynb
+++ b/nbplain/03_dictionaries.ipynb
@@ -4,8 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dictionaries\n",
+    "# Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview:\n",
+    "- **Teaching:** 10 min\n",
+    "- **Exercises:** 10 min\n",
     "\n",
+    "**Questions**\n",
+    "- What is a dictioanry?\n",
+    "- Why wouldn't I just use a list?\n",
+    "- How do I access the items in a dictionary?\n",
+    "- How do I modify or add items to a dictionary?\n",
+    "\n",
+    "**Objectives**\n",
+    "- Learn how to define, access, modify and add to dictionaries\n",
+    "- Understand the difference between a dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Dictionaries are another type of Python container. Instead of storing values by index, they store them associated with a key.\n",
     "\n",
     "You create dictionaries using curly brackets, assiging values to their keys using a colon, e.g.\n",
@@ -425,13 +449,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Key Points:\n",
+    "\n",
+    "- Python dicts are like Python lists, they can store anything!\n",
+    "- Python dicts are different to Python lists in the way they are indexed. Lists are indexed with whole numbers, whereas dicts are indexed with some key, which can be anything. In many cases the key is a string.\n",
+    "- An empty dict is created with my_dict = dict() or my_dict = {}.\n",
+    "- We can explicitly construct a dict with my_dict = {'a' : 1, 'b' : 't', 'c' : False}.\n",
+    "- We can access a value in a dict by using it's key my_dict['b'].\n",
+    "- We can also easily add or change values in a dictionary: `my_dict['title'] = 'My personal dictionary'"
+   ]
   }
  ],
  "metadata": {
@@ -450,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
