Added template decoration for remainder episodes 04, 05, 06 migrated

--- a/nbplain/01_jupyter.ipynb
+++ b/nbplain/01_jupyter.ipynb
@@ -20,7 +20,7 @@
     "- Why might I want to use them?\n",
     "\n",
     "**Objectives**\n",
-    "- Know how to enter e Python within a notebook\n",
+    "- Know how to enter Python within a notebook\n",
     "- Understand the difference between code and markdown cells\n",
     "- Know that you can add documentation/description to your code with markdown"
    ]
