--- a/nbplain/05_objects.ipynb
+++ b/nbplain/05_objects.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objects\n",
+    "# Objects"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview:\n",
+    "- **Teaching:** 10 min\n",
+    "- **Exercises:** 10 min\n",
+    "\n",
+    "**Questions**\n",
+    "- What is an object?\n",
+    "- How should I use objects?\n",
+    "- What are the components of an object?\n",
+    "\n",
+    "**Objectives**\n",
+    "- Know how to define an object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What are objects?\n",
     "\n",
     "In the last session you learned how to package up useful code into functions. This is a really useful idea, as it lets you re-use useful code in your own scripts, and to then share useful code with other people.\n",
     "\n",
@@ -610,13 +634,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Key Points:\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
@@ -635,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
