--- a/nbplain/06_classes.ipynb
+++ b/nbplain/06_classes.ipynb
@@ -4,7 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classes\n",
+    "# Classes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview:\n",
+    "- **Teaching:** 10 min\n",
+    "- **Exercises:** 10 min\n",
+    "\n",
+    "**Questions**\n",
+    "- What is a class?\n",
+    "- How do I define a class?\n",
+    "- What should a class contain?\n",
+    "\n",
+    "**Objectives**\n",
+    "- Know how to define an class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## What is a class?\n",
     "\n",
     "Classes allow you to define how to package data with functions to create objects. An object is an instance of a class, which contains its own data, and its own copy of functions that can operate on that data.\n",
     "\n",
@@ -805,13 +829,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Key Points:\n",
+    "\n",
+    "- "
+   ]
   }
  ],
  "metadata": {
@@ -830,7 +856,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
