--- a/nbplain/00_schedule.ipynb
+++ b/nbplain/00_schedule.ipynb
@@ -8,9 +8,9 @@
     }
    },
    "source": [
-    "# Lesson title\n",
+    "# Functions and Classes in Python\n",
     "\n",
-    "This is a description of the lesson"
+    "If you have started writing programmes in Python, you will likely have reached the stage where you want to improve the structure of your program.  This lesson will Jupyter notebooks to revise functions as well as Python's list and dictionary data structures before introducing classes.  It forms part of the Intermediate Programming in Python course to help you develop your own modules and collaborate with other developers."
    ]
   },
   {
@@ -23,10 +23,8 @@
    "source": [
     "## Prerequisites:\n",
     "\n",
-    "To complete this lesson you should be able to do all the things in this list:\n",
-    "* Item 1\n",
-    "* Item 2\n",
-    "* Item 3"
+    "To complete this lesson you should be familiar with:\n",
+    "* Writing programs in Python"
    ]
   },
   {
@@ -41,19 +39,12 @@
     "\n",
     "| Time | Episode | Description |\n",
     "|---|---|---|\n",
-    "| 0:00 | [Introduction](01_untitled_episode.ipynb) | Introduction |\n",
-    "| 0:15 | [Next Lesson]() | Description |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Be sure to edit the links above."
+    "| 0:00 | [Review Jupyter Notebooks](01_jupyter.ipynb) | How to use a jupyter notebook |\n",
+    "| 0:15 | [Lists](02_lists.ipynb) | Revise Python Lists |\n",
+    "| 0:30 | [Dictionaries](03_dictionaries.ipynb) | Python Dicts |\n",
+    "| 0:45 | [Functions](04_functions.ipynb) | Revise Functions in Python |\n",
+    "| 1:00 | [Objects](05_objects.ipynb) | What are Python Objects? |\n",
+    "| 1:30 | [Classes](06_classes.ipynb) | What are Python Classes? |"
    ]
   },
   {
@@ -66,7 +57,7 @@
    "source": [
     "## Setup:\n",
     "\n",
-    "Add any setup instructions here, or if there are a lot, consider putting it in its own section."
+    "Log on to [notebooks.azure.com](https://notebooks.azure.com) and clone the lesson library ***add link.***"
    ]
   }
  ],
