Updated header and added multicell to lists and dicts

--- a/nbplain/03_dictionaries.ipynb
+++ b/nbplain/03_dictionaries.ipynb
@@ -42,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = { \"cat\" : \"mieow\", \"dog\" : \"woof\", \"horse\" : \"neigh\"}"
@@ -116,7 +114,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-104bafb971c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fish'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-afabe6ae7883>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'fish'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m: 'fish'"
      ]
     }
@@ -135,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a[\"fish\"] = \"bubble\""
@@ -151,7 +147,7 @@
     {
      "data": {
       "text/plain": [
-       "{'cat': 'mieow', 'dog': 'woof', 'fish': 'bubble', 'horse': 'neigh'}"
+       "{'cat': 'mieow', 'dog': 'woof', 'horse': 'neigh', 'fish': 'bubble'}"
       ]
      },
      "execution_count": 6,
@@ -199,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['fish', 'dog', 'horse', 'cat'])"
+       "dict_keys(['cat', 'dog', 'horse', 'fish'])"
       ]
      },
      "execution_count": 8,
@@ -219,7 +215,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_values(['bubble', 'woof', 'neigh', 'mieow'])"
+       "dict_values(['mieow', 'woof', 'neigh', 'bubble'])"
       ]
      },
      "execution_count": 9,
@@ -247,10 +243,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A fish goes bubble\n",
+      "A cat goes mieow\n",
       "A dog goes woof\n",
       "A horse goes neigh\n",
-      "A cat goes mieow\n"
+      "A fish goes bubble\n"
      ]
     }
    ],
@@ -269,9 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "b = { \"a\" : [\"aardvark\", \"anteater\", \"antelope\"], \"b\" : [\"badger\", \"beetle\"], 26.5: a}"
@@ -308,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise\n",
+    "## Exercises\n",
     "\n",
     "Below you have a dictionary that contains the full mapping of every letter to its Morse-code equivalent."
    ]
@@ -316,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "letter_to_morse = {'a':'.-', 'b':'-...', 'c':'-.-.', 'd':'-..', 'e':'.', 'f':'..-.',\n",
@@ -335,9 +327,18 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Exercise 1\n",
+    "## Exercise: 1\n",
     "\n",
-    "Use the morse code dictionary to look up the morse code for the letters \"s\" and \"o\". What is the morse code for \"SOS\" (the international emergency distress signal)?"
+    "Use the Morse code dictionary to look up the Morse code for the letters \"s\" and \"o\". What is the Morse code for \"SOS\" (the international emergency distress signal)?\n",
+    "\n",
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+: 1"
    ]
   },
   {
@@ -361,17 +362,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2\n",
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise: 2\n",
     "\n",
-    "Here is a string that contains a message that must be converted to morse code. Write a loop that converts each letter into the morse code equivalent, and stores it into a list. Print the list out to see the full morse code message that must be sent. Note that you will need to use the `.lower()` function to get the lower case of capital letters."
+    "Here is a string that contains a message that must be converted to morse code. Write a loop that converts each letter into the morse code equivalent, and stores it into a list. Print the list out to see the full morse code message that must be sent. Note that you will need to use the `.lower()` function to get the lower case of capital letters.\n",
+    "\n",
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+: 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "message = \"SOS We have hit an iceberg and need help quickly\""
@@ -401,7 +416,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 3\n",
+    ":Solution+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise+: 3\n",
     "\n",
     "The inverted form of a dictionary is one where the keys are now looked up by value. For example, the below code inverts `letter_to_morse` such that the morse code is the key, and the letter is the value."
    ]
@@ -409,9 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "morse_to_letter = {}\n",
@@ -425,7 +445,23 @@
    "source": [
     "Check that this code works by verifying that `morse_to_letter[\"...\"]` equals \"s\".\n",
     "\n",
-    "Next, loop through the morse code message you created in exercise 2 and see if you can convert it back to english. Note that you can join a list of letters together into a string using the code `\"\".join(letters)`."
+    "Next, loop through the morse code message you created in exercise 2 and see if you can convert it back to english. Note that you can join a list of letters together into a string using the code `\"\".join(letters)`.\n",
+    "\n",
+    "[Solution]()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":Exercise+"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solution+: 3"
    ]
   },
   {
@@ -446,6 +482,13 @@
     "for code in morse:\n",
     "    english.append( morse_to_letter[code] )\n",
     "print(\"\".join(english))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":Solution+"
    ]
   },
   {
